# gitdiffstat

./: .gitignore  LICENSE  README.md  pyproject.toml
gitdiffstat/: README.md
gitdiffstat/src/gitdiffstats_oliverRamirez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gitdiffstat/test/: testAddDeleteModifyFile.py  testMultipleFiles.py  testWithTabCharacters.py
src/gitdiffstats/: diffstats.py
test/: testEmptyDiff.py  testHunkLineNumbers.py  testTrailingSpaces.py
