[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdiffstats_oliverRamirez"
version = "0.0.1"
authors = [
  { name="Oliver Ramirez", email="oliverramirez307@gmail.com" },
]
description = "A package for extracting key information from a git diff string"
readme = "README.md"
requires-python = ">=3.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/oliverRamirez4/gitdiffstat"
Issues = "https://github.com/oliverRamirez4/gitdiffstat/issues"
